[package]
name = "adhesive"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
jni = { version = "0.21.1", features = ["invocation"] }
thiserror = { version = "2.0"}
log = { version = "0.4" }

regex = { version = "1.11" }
random-string = "1.0"
once_cell = "1.20"

tokio = { version = "1.41", features = ["rt-multi-thread"] }
datafusion = { version = "43.0", features = ["pyarrow"] }
async-trait = { version = "0.1" }

[dev-dependencies]
ctor = { version = "0.2"}
env_logger = { version = "0.11" }
